avatar change flicker bug for other users fixed

--- a/src/components/Chat/ChatRenderUtils.module.css
+++ b/src/components/Chat/ChatRenderUtils.module.css
@@ -54,6 +54,12 @@
     top: 50%;
 }
 
+.avatar_placeholder{
+    display: inline-block;
+    border-radius: 100vw;
+    background-color: var(--dark2);
+}
+
 
 
 .blockie_wrapper{
